# hypergrib

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  design.md
crates/grib_tables/: Cargo.toml  README.md
crates/grib_tables/csv/: README.md
crates/grib_tables/src/: center_and_table_versions.rs  csv_reader.rs  lib.rs  master_table.rs  numeric_id.rs  originating_center.rs  parameter.rs  parameter_database.rs  product.rs  template.rs
crates/grib_tables/src/category/: mod.rs
crates/grib_tables/src/category/hydrological/: mod.rs
crates/grib_tables/src/category/meteorological/: mod.rs  moisture.rs  temperature.rs
crates/grib_tables/src/csv_reader/: read_local_index.rs  read_table_4_2.rs
crates/grib_tables/src/parameter/: database.rs  numeric_id.rs
crates/grib_tables/submodules/: README.md
crates/grib_tables/tests/: abbrev_to_product.rs
crates/hypergrib/: Cargo.toml
crates/hypergrib/src/: lib.rs  main.rs
crates/hypergrib/src/datasets/: gefs.rs  gefs_test_paths.csv
crates/hypergrib/src/datasets/gefs/: test_utils.rs  version.rs
crates/hypergrib_idx_parser/: Cargo.toml  README.md
crates/hypergrib_idx_parser/src/: lib.rs  parameter.rs
crates/hypergrib_idx_parser/src/datasets/: gefs.rs
crates/hypergrib_indexer/: Cargo.toml  README.md
crates/hypergrib_indexer/datasets/gefs/: index.yaml
crates/hypergrib_indexer/src/: coord_labels_builder.rs  datasets.rs  ingest_yaml.rs  lib.rs  main.rs
crates/hypergrib_indexer/src/datasets/: gefs.rs
crates/hypergrib_manifest/: Cargo.toml  README.md
crates/hypergrib_manifest/src/: datasets.rs  lib.rs  main.rs
crates/hypergrib_manifest/src/datasets/: README.md  gefs.rs
