[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/JackKelly/hypergrib"
repository = "https://github.com/JackKelly/hypergrib"
readme = "README.md"
authors=["Jack Kelly <jack@openclimatefix.org>"]

[workspace.dependencies] # In alphabetical order
anyhow = "1.0.86"
clap = "4.5.15"  # parse command line arguments etc.
futures-util = "0.3.30"
gribberish = "0.20.1"
indicatif = "0.17.8"  # progress bars etc.
object_store = "0.10.2"
tokio = { version = "1.39.2", features = ["rt-multi-thread"]}
url = "2.5.2"

[profile.bench]
debug = true  # Enable debuginfo when profiling with cargo flamegraph.
