[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/JackKelly/hypergrib"
repository = "https://github.com/JackKelly/hypergrib"
readme = "README.md"
authors = ["Jack Kelly <jack@openclimatefix.org>"]
categories = ["science", "science::geo", "parser-implementations"]
keywords = ["GRIB", "weather", "meteorology", "climate", "oceanography"]

[workspace.dependencies] # In alphabetical order
anyhow = "1.0"
bytes = "1.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = "4.5"  # parse command line arguments etc.
csv = "1.3"
derive_more = { version = "1.0", features = ["display"]}
futures-util = "0.3"
gribberish = { git = "https://github.com/mpiannucci/gribberish.git" }
glob = "0.3"
indicatif = "0.17"  # progress bars etc.
object_store = "0.11"
regex = "1.11"
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["rt-multi-thread"]}
url = "2.5"

[profile.bench]
debug = true  # Enable debuginfo when profiling with cargo flamegraph.
