[package]
name = "grib_tables"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { version = "1.0.0", features = ["display"]}
thiserror = "1.0.64"
