[package]
name = "grib_tables"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
derive_more.workspace = true
serde.workspace = true
thiserror.workspace = true
