[package]
name = "grib_tables"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository = "https://github.com/JackKelly/hypergrib/tree/main/crates/grib_tables"
readme = "README.md"
authors.workspace = true
description = "Retrieve details of each GRIB parameter from the parameter abbreviation or from the numeric identifier"
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
derive_more.workspace = true
glob.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
