[package]
name = "hypergrib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # In alphabetical order
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
futures-util.workspace = true
gribberish.workspace = true
indicatif.workspace = true
object_store = { workspace = true, features = ["aws"] }
serde.workspace = true
tokio.workspace = true
url.workspace = true
