[package]
name = "hypergrib_idx_parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
gribberish.workspace = true
serde.workspace = true
object_store.workspace = true
