[package]
name = "hypergrib_indexer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
futures-util.workspace = true
hypergrib.workspace = true
object_store.workspace = true
tokio.workspace = true
url.workspace = true
