[package]
name = "hypergrib_manifest"
version = "0.0.1"  # Maybe we will publish this as a stand-alone crate.
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # In alphabetical order
anyhow.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
duckdb = { workspace = true, features = ["bundled"] }
futures-util.workspace = true
gribberish.workspace = true
indicatif.workspace = true
object_store = { workspace = true, features = ["aws"] }
serde.workspace = true
tokio.workspace = true
url.workspace = true
